notes are side by side in single note type view - need to fix spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -123,7 +123,7 @@ input {
 }
 
 .notes {
-	margin: 25px 0;
+	margin: 25px 0px;
 }
 
 #pedong-notes {
